fix(qodana): Fix Qodana high suggestions